--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Flatiron School</title>
+    </head>
+    <body>
+        <h1>This is the Flatiron School Link</h1>
+        <a href="https://flatironschool.com">Flatiron School</a>
+    </body>
+</html>
