Added icon tag to titile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8" />
         <title>Flatiron School</title>
+        <link rel="icon" type="image/icon" href="compass-icon.png" />
     </head>
     <body>
         <h1>This is the Flatiron School Link</h1>
